# competitive-learning

./: Untitled.ipynb  hello.py  pyproject.toml  requirements.txt  update_requirements.sh
competitive_learning/: app.py  competitive_learning_app.py  demo.py  dummy_model.py  enums.py  function.py  model.py
competitive_learning/handler/: data.py
scripts/: run_random_experiment.py
