[project]
name = "competitive-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.4.1",
    "fastapi>=0.115.3",
    "gradio>=5.3.0",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pudb>=2024.1.3",
    "pydantic>=2.9.2",
    "streamlit>=1.39.0",
    "uvicorn>=0.32.0",
]
